Setup Spring framework, create Application and Controller classes