@@ -1,41 +1,30 @@
 plugins {
-    id 'java'
-    id 'application'
-    id 'org.openjfx.javafxplugin' version '0.1.0'
+	id 'java'
+	id 'org.springframework.boot' version '3.3.1'
+	id 'io.spring.dependency-management' version '1.1.5'
 }
 
-group = 'org.example'
-version = '1.0-SNAPSHOT'
+group = 'io.github.jesraali'
+version = '0.0.1-SNAPSHOT'
 
-apply plugin: 'java'
-apply plugin: 'application'
-
-applicationDefaultJvmArgs = ['--module-path=lib/javafx.base.jar','--add-modules=javafx.controls']
+java {
+	toolchain {
+		languageVersion = JavaLanguageVersion.of(21)
+	}
+}
 
 repositories {
-    mavenCentral()
+	mavenCentral()
 }
-
-mainClassName = "io.github.jesraali.Main"
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+	implementation 'org.springframework.boot:spring-boot-starter-freemarker'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
-javafx {
-    version = "21.0.3"
-    modules = [ 'javafx.controls', 'javafx.fxml']
-}
-
-test {
-    useJUnitPlatform()
-}
-
-jar {
-    manifest {
-        attributes(
-                'Main-Class': 'io.github.jesraali.Main'
-        )
-    }
+tasks.named('test') {
+	useJUnitPlatform()
 }
